This file documents the revision history for Perl extension Catalyst.

5.57
        - Added PAR support

5.56   2005-11-16 10:33:00
        - Fixed FastCGI engine to not clobber the global %ENV on each
          request. (Sam Vilain)
        - Updated benchmarking to work with detach
        - Fixed dispatcher, so $c->req->action(undef) works again
        - Updated Catalyst::Test to use HTTP::Request::AsCGI
        - Added -pidfile to external FastCGI server.

5.55    2005-11-15 12:55:00
        - Fixed multiple cookie handling

5.54    2005-11-14 22:55:00
        - Fixed a Module::Pluggable::Fast related bug

5.53    2005-11-14 15:55:00
        - Removed t/04prereq.t that was testing for non-required
          modules.

5.52    2005-11-14 10:57:00
        - Strip '..'s in static urls to fix security issue.

5.51    2005-11-14 00:45:00
        - Changed uri_for to use namespace instead of match.

5.50    2005-11-13 20:45:00
        - Fixed minor bugs.
        - Updated docs.

5.49_05 2005-11-12 20:45:00
        - Large update to the documentation. (David Kamholz)
        - Fixed args handling in forward()
        - Fixed forwarding to classes
        - Fixed catalyst.pl-generated Build.PL Makefile section.
        - Fixed relative forwarding
        - Fixed forward arrows in debug output

5.49_04 2005-11-09 23:00:00
        - Made context, dispatcher, engine, request and response classes
          configurable.
        - Added $c->stack.
        - Fixed dispatcher to ignore unknown attributes.
        - Improved format of startup debug log.
        - Updated built in server to restart on win32. (Will Hawes)
        - Fixed streaming write from a filehandle to stop writing
          if the browser is closed.
        - Added $c->controller, $c->model and $c->view shortcuts.
        - Switched to Text::SimpleTable.

5.49_03 2005-11-03 12:00:00
        - Fixed $c->req->{path} for backwards-compatibility.
        - Allow debug to be disabled via ENV as well as enabled.